/***********************************************************************
X3 ChangeLog

2009-10-12  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add python_handle_del_user.

	* src/plugins/__init__.py: add empty del_user handler function to
	Plugin class.

	* src/modpython.py: add del_user handler function.

2009-10-12  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: refactor python_handle_nick_change.

	* src/plugins/__init__.py: add empty nick_change handler function to
	Plugin class.

	* src/modpython.py: refactor nick_change to use new plugin
	system.

2009-10-12  Henrik Stuart <evilnet@hstuart.dk>

	* src/plugins/__init__.py: refactor plugin instantiation logic.

2009-10-12  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: refactor python_handle_new_user.

	* src/modpython.py: refactor new_user handler to use new plugin
	system.

	* src/plugins/__init__.py: add empty new_user handler function to
	Plugin class.

2009-10-12  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: refactor python_handle_server_link to be more
	Pythonic.

	* src/modpython.py: rename old plugins class to plugins_ and use a
	more general plugin system.

	* src/plugins/__init__.py: extend with plugin base-class and
	recursive plugin load logic.

2009-10-12  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add emb_service_register function.

2009-10-12  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add emb_adduser function.

2009-10-12  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add emb_svsjoin function.

2009-10-12  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add emb_svsquit function.

	* src/proto.h: observe proper const-ness in irc_svsquit function.
	
	* src/proto-p10.c: observe proper const-ness in irc_svsquit function.

2009-10-12  Henrik Stuart <evilnet@hstuart.dk>

	* src/mod-python.c: add emb_svsnick function.

2009-10-12  Henrik Stuart <evilnet@hstuart.dk>
