@@ -3,6 +3,16 @@ X3 ChangeLog
 
 2009-10-12  Henrik Stuart <evilnet@hstuart.dk>
 
+	* src/mod-python.c: add python_handle_topic and refactor
+	emb_get_channel.
+
+	* src/plugins/__init__.py: add empty topic handler function to
+	Plugin class.
+
+	* src/modpython.py: add topic handler function.
+
+2009-10-12  Henrik Stuart <evilnet@hstuart.dk>
+
 	* src/mod-python.c: add python_handle_del_user.
 
 	* src/plugins/__init__.py: add empty del_user handler function to
